--- a/a-jetty/src/main/res/layout/ajetty.xml
+++ b/a-jetty/src/main/res/layout/ajetty.xml
@@ -54,12 +54,11 @@
     android:id="@+id/btnStop"
     android:text="@string/stop" />
 
-  <TextView
-    android:id="@+id/tvLink"
+  <Button
+    android:id="@+id/btnStartBrowser"
     android:layout_marginTop="40sp"
     android:gravity="center_horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:textSize="20sp" />
+    android:layout_height="wrap_content" />
 
 </LinearLayout>
