a-javabeans8 used, added swing starter, logging

--- a/a-jetty/src/main/res/layout/ajetty.xml
+++ b/a-jetty/src/main/res/layout/ajetty.xml
@@ -35,11 +35,10 @@
       android:layout_weight="1"
       android:text="@string/port" />
     
-    <EditText
-      android:id="@+id/etPort"
+    <Spinner
+      android:id="@+id/cmbPort"
       android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:inputType="number" />
+      android:layout_height="wrap_content" />
   </LinearLayout>
 
   <Button
